# Snake-SDL2

./: CMakeLists.txt
src/: game.cpp  game.h  main.cpp
